# app-builder-ai

./: .gitignore  .tool-versions  LICENSE  NOTICE  README.md  pyproject.toml
app_builder/: main.py  schema.py  test.py  util.py
app_builder/builders/: fix.py  source_code.py  test.py
app_builder/prompts/: code_output_parser_format.yaml  fix_test_errors.yaml  gen_acceptance_test.yaml  gen_acceptance_test_scenarios.yaml  gen_public_interface_document.yaml  gen_source_code.yaml  gen_unit_test.yaml  modify_source_code.yaml  modify_unit_test.yaml  suggest_test_fixes.yaml  update_public_interface_document.yaml
docs/: workflow-build.puml  workflow-modify.puml
