[tool.poetry]
name = "app-builder-ai"
version = "0.1.0"
description = ""
authors = ["WillBooster Inc. <contact@willbooster.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "app_builder" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = { version = "^0.0.274", extras = ["openai"] }
pydantic = "^2.0.0"
python-dotenv = "^1"
faiss-cpu = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
